--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
         <section class="menu-list">
             <h2 class="sips-title">Sips</h2>
             <div class="menu">
-                <div class="left">
+                <div class="left-sips">
                     <div class="inner">
                         <h3 class="sips-title">Coffee</h3>
                         <ul class="coffee-list">
-                            <li><span>ESPRESSO</span><span>15 kr</span></li>
-                            <li><span>FLAT WHITE</span><span>15 kr</span></li>
-                            <li><span>MACCHIATO</span><span>15 kr</span></li>
-                            <li><span>AMERICANO</span><span>15 kr</span></li>
-                            <li><span>CAPPUCINO</span><span>15 kr</span></li>
-                            <li><span>CORTADO</span><span>15 kr</span></li>
-                            <li><span>PICCOLO</span><span>15 kr</span></li>
-                            <li><span>FILTER</span><span>15 kr</span></li>
-                            <li><span>LATTE</span><span>15 kr</span></li>
+                            <li><span>ESPRESSO</span><span>15 SEK</span></li>
+                            <li><span>FLAT WHITE</span><span>15 SEK</span></li>
+                            <li><span>MACCHIATO</span><span>15 SEK</span></li>
+                            <li><span>AMERICANO</span><span>15 SEK</span></li>
+                            <li><span>CAPPUCINO</span><span>15 SEK</span></li>
+                            <li><span>CORTADO</span><span>15 SEK</span></li>
+                            <li><span>PICCOLO</span><span>15 SEK</span></li>
+                            <li><span>FILTER</span><span>15 SEK</span></li>
+                            <li><span>LATTE</span><span>15 SEK</span></li>
                         </ul>
                         <figure class="coffee-cup">
                             <img src="img/coffee_cup.svg">
@@ -76,10 +76,10 @@
                         <div class="inner">
                             <h3 class="sips-title">Special Coffee</h3>
                             <ul class="coffee-list">
-                                <li><span>VIETNAMESE DRIP</span><span>15 kr</span></li>
-                                <li><span>COCONUT COFFEE</span><span>15 kr</span></li>
-                                <li><span>SUNRISE BREW</span><span>15 kr</span></li>
-                                <li><span>COLD BREW</span><span>15 kr</span></li>
+                                <li><span>VIETNAMESE DRIP</span><span>15 SEK</span></li>
+                                <li><span>COCONUT COFFEE</span><span>15 SEK</span></li>
+                                <li><span>SUNRISE BREW</span><span>15 SEK</span></li>
+                                <li><span>COLD BREW</span><span>15 SEK</span></li>
                             </ul>
                         </div>
                         <div class="spacer"></div>
@@ -88,10 +88,10 @@
                         <div class="inner">
                             <h3 class="sips-title">Iced Coffee</h3>
                             <ul class="coffee-list">
-                                <li><span>ICED BLACK</span> <span>15 kr</span></li>
-                                <li><span>ICED ESPRESSO</span> <span>15 kr</span></li>
-                                <li><span>ICED FILTER</span> <span>15 kr</span></li>
-                                <li><span>ICED LATTE</span> <span>15 kr</span></li>
+                                <li><span>ICED BLACK</span> <span>15 SEK</span></li>
+                                <li><span>ICED ESPRESSO</span> <span>15 SEK</span></li>
+                                <li><span>ICED FILTER</span> <span>15 SEK</span></li>
+                                <li><span>ICED LATTE</span> <span>15 SEK</span></li>
                             </ul>
                         </div>
                     </div>
@@ -100,32 +100,32 @@
                     <div class="inner">
                         <h3 class="sips-title">Non-coffee</h3>
                         <ul class="coffee-list">
-                            <li><span>KOMBUCHA</span> <span>15 kr</span></li>
-                            <li><span>SOFT DRINK</span> <span>15 kr</span></li>
-                            <li><span>ICED MATCHA</span> <span>15 kr</span></li>
-                            <li><span>ORANGE JUICE</span> <span>15 kr</span></li>
-                            <li><span>EARL GREY TEA</span> <span>15 kr</span></li>
-                            <li><span>HOT CHOCOLATE</span> <span>15 kr</span></li>
-                            <li><span>ENGLISH BREAKFAST TEA</span> <span>15 kr</span></li>
-                            <li><span>ICED LEMON TEA</span> <span>15 kr</span></li>
-                            <li><span>GOLDEN LATTE</span> <span>15 kr</span></li>
-                            <li><span>APPLE JUICE</span> <span>15 kr</span></li>
-                            <li><span>STILL WATER</span> <span>15 kr</span></li>
-                            <li><span>CHAI LATTE</span> <span>15 kr</span></li>
-                            <li><span>LEMON TEA</span> <span>15 kr</span></li>
-                            <li><span>GREEN TEA</span> <span>15 kr</span></li>
-                            <li><span>MATCHA</span> <span>15 kr</span></li>
-                            <li><span>OAT MILK</span> <span>15 kr</span></li>
+                            <li><span>KOMBUCHA</span> <span>15 SEK</span></li>
+                            <li><span>SOFT DRINK</span> <span>15 SEK</span></li>
+                            <li><span>ICED MATCHA</span> <span>15 SEK</span></li>
+                            <li><span>ORANGE JUICE</span> <span>15 SEK</span></li>
+                            <li><span>EARL GREY TEA</span> <span>15 SEK</span></li>
+                            <li><span>HOT CHOCOLATE</span> <span>15 SEK</span></li>
+                            <li><span>ENGLISH BREAKFAST TEA</span> <span>15 SEK</span></li>
+                            <li><span>ICED LEMON TEA</span> <span>15 SEK</span></li>
+                            <li><span>GOLDEN LATTE</span> <span>15 SEK</span></li>
+                            <li><span>APPLE JUICE</span> <span>15 SEK</span></li>
+                            <li><span>STILL WATER</span> <span>15 SEK</span></li>
+                            <li><span>CHAI LATTE</span> <span>15 SEK</span></li>
+                            <li><span>LEMON TEA</span> <span>15 SEK</span></li>
+                            <li><span>GREEN TEA</span> <span>15 SEK</span></li>
+                            <li><span>MATCHA</span> <span>15 SEK</span></li>
+                            <li><span>OAT MILK</span> <span>15 SEK</span></li>
                         </ul>
                     </div>
                     <div>
                         <div class="inner border-top">
                             <h3 class="sips-title">Add-ons</h3>
                             <ul class="coffee-list">
-                                <li><span>ALMOND MILK</span> <span>15 kr</span></li>
-                                <li><span>COCONUT MILK</span> <span>15 kr</span></li>
-                                <li><span>EXTRA SHOT</span> <span>15 kr</span></li>
-                                <li><span>DECAF</span> <span>15 kr</span></li>
+                                <li><span>ALMOND MILK</span> <span>15 SEK</span></li>
+                                <li><span>COCONUT MILK</span> <span>15 SEK</span></li>
+                                <li><span>EXTRA SHOT</span> <span>15 SEK</span></li>
+                                <li><span>DECAF</span> <span>15 SEK</span></li>
                             </ul>
                         </div>
                     </div>
@@ -137,72 +137,74 @@
         <section class="menu-list">
             <h2 class="grub-title">Grub</h2>
             <div class="menu">
-                <div class="left">
-                    <div class="border-top">
+                <div class="left-grub">
+                    <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Savory Brekkie</h3>
-                            <ul>
-                                <li><strong>SHAKSHUKA</strong><br>Two poached eggs in a pan with tomato, peppers, and
-                                    onions.
-                                    Sourdough bread.</li>
-                                <li><strong>AVOCADO TOAST (V)</strong><br>Avocado on sourdough bread with piri piri
-                                    sauce. Spice
-                                    it up with an add-on!</li>
-                                <li><strong>EGGS BENEDICT</strong><br>Two poached eggs on toast topped with Hollandaise.
-                                </li>
-                                <li><strong>SALMON BAGEL</strong><br>Salmon on sourdough bread with cream cheese and
-                                    dill.</li>
-                            </ul>
+                            <h4 class="menu-dish-title">SHAKSHUKA</h4>
+                            <p class="menu-dish-desc">Two poached eggs in a pan with tomato, peppers, and onions.
+                                Sourdough bread.</p>
+
+                            <h4 class="menu-dish-title">AVOCADO TOAST (V)</h4>
+                            <p class="menu-dish-desc">Avocado on sourdough bread with piri piri sauce. Spice it up with
+                                an add-on!</p>
+
+                            <h4 class="menu-dish-title">EGGS BENEDICT</h4>
+                            <p class="menu-dish-desc">Two poached eggs on toast topped with Hollandaise.</p>
+
+                            <h4 class="menu-dish-title">SALMON BAGEL</h4>
+                            <p class="menu-dish-desc">Salmon on sourdough bread with cream cheese and dill.</p>
                         </div>
                     </div>
-                    <div class="border-top">
+                    <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Sweet Brekkie</h3>
-                            <ul>
-                                <li><strong>ACAI BOWL</strong><br>Acai sorbet blended with banana, topped with coconut
-                                    and
-                                    homemade granola.</li>
-                                <li><strong>FLUFFY PANCAKES</strong><br>Stack of three fluffy pancakes with fresh fruit
-                                    covered
-                                    in maple syrup</li>
-                                <li><strong>WAFFLES (V)</strong><br>Belgian waffles with fresh fruit and chocolate sauce
-                                </li>
-                                <li><strong>FRENCH TOAST</strong><br>Two slices of buttery brioche bread with cinnamon
-                                    sugar and
-                                    maple syrup.</li>
-                            </ul>
+                            <h4 class="menu-dish-title">ACAI BOWL</h4>
+                            <p class="menu-dish-desc">Acai sorbet blended with banana, topped with coconut and homemade
+                                granola.</p>
+
+                            <h4 class="menu-dish-title">FLUFFY PANCAKES</h4>
+                            <p class="menu-dish-desc">Stack of three fluffy pancakes with fresh fruit covered in maple
+                                syrup</p>
+
+                            <h4 class="menu-dish-title">WAFFLES (V)</h4>
+                            <p class="menu-dish-desc">Belgian waffles with fresh fruit and chocolate sauce</p>
+
+                            <h4 class="menu-dish-title">FRENCH TOAST</h4>
+                            <p class="menu-dish-desc">Two slices of buttery brioche bread with cinnamon sugar and maple
+                                syrup.</p>
                         </div>
                     </div>
                 </div>
                 <div class="right">
-                    <div class="border-top">
+                    <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Baked Goods</h3>
                             <ul class="coffee-list">
-                                <li><span>DONUT</span><span>15 kr</span></li>
-                                <li><span>CRONUT</span><span>15 kr</span></li>
-                                <li><span>CROISSANT</span><span>15 kr</span></li>
-                                <li><span>CINNAMON ROLL</span><span>15 kr</span></li>
-                                <li><span>NEW YORK CROISSANT</span><span>15 kr</span></li>
-                                <li><span>CARDAMOM ROLL</span><span>15 kr</span></li>
-                                <li><span>GÂTEAU MARCEL</span><span>15 kr</span></li>
-                                <li><span>CARROT CAKE (V)</span><span>15 kr</span></li>
-                                <li><span>CHEESE CAKE</span><span>15 kr</span></li>
+                                <li><span>DONUT</span><span>15 SEK</span></li>
+                                <li><span>CRONUT</span><span>15 SEK</span></li>
+                                <li><span>CROISSANT</span><span>15 SEK</span></li>
+                                <li><span>CINNAMON ROLL</span><span>15 SEK</span></li>
+                                <li><span>NEW YORK CROISSANT</span><span>15 SEK</span></li>
+                                <li><span>CARDAMOM ROLL</span><span>15 SEK</span></li>
+                                <li><span>GÂTEAU MARCEL</span><span>15 SEK</span></li>
+                                <li><span>CARROT CAKE (V)</span><span>15 SEK</span></li>
+                                <li><span>CHEESE CAKE</span><span>15 SEK</span></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="border-top">
+                    <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Add Ons</h3>
                             <ul class="coffee-list">
-                                <li><span>SALMON</span><span>15 kr</span></li>
-                                <li><span>EGG OF CHOICE</span><span>15 kr</span></li>
-                                <li><span>ICE CREAM SCOOP</span><span>15 kr</span></li>
-                                <li><span>SAUTEED SPINACH</span><span>15 kr</span></li>
-                                <li><span>SOURDOUGH SLICE</span><span>15 kr</span></li>
-                                <li><span>FRESH FRUIT</span><span>15 kr</span></li>
-                                <li><span>CHEESE (V)</span><span>15 kr</span></li>
-                                <li><span>APPLE SLICES</span><span>15 kr</span></li>
+                                <li><span>SALMON</span><span>15 SEK</span></li>
+                                <li><span>EGG OF CHOICE</span><span>15 SEK</span></li>
+                                <li><span>ICE CREAM SCOOP</span><span>15 SEK</span></li>
+                                <li><span>SAUTEED SPINACH</span><span>15 SEK</span></li>
+                                <li><span>SOURDOUGH SLICE</span><span>15 SEK</span></li>
+                                <li><span>FRESH FRUIT</span><span>15 SEK</span></li>
+                                <li><span>CHEESE (V)</span><span>15 SEK</span></li>
+                                <li><span>APPLE SLICES</span><span>15 SEK</span></li>
                             </ul>
                         </div>
                     </div>
@@ -214,30 +216,30 @@
         <section>
             <h2 class="news-title">News</h2>
             <div>
-                <h4 class="news-date">2025-DEC-24 XMAS DEALS</h4>
-                <p>
+                <h4 class="menu-dish-title">2025-DEC-24 XMAS DEALS</h4>
+                <p class="menu-dish-desc">
                     We’re open on Christmas Eve! Pop in for a fresh breakfast to get you
                     all calm and demure for the in-laws lunch :)
                 </p>
-                <h4 class="news-date">2025-NOV-20 SUNSHINE ON THE MENU</h4>
-                <p>
+                <h4 class="menu-dish-title">2025-NOV-20 SUNSHINE ON THE MENU</h4>
+                <p class="menu-dish-desc">
                     We’ve added an Acai Bowl to the breakfast menu to keep your energy
                     levels up throughout the gloomy darkness.
                 </p>
-                <h4 class="news-date">2025-OCT-30 PUMPKIN SPICE LATTE WEEKEND</h4>
-                <p>
+                <h4 class="menu-dish-title">2025-OCT-30 PUMPKIN SPICE LATTE WEEKEND</h4>
+                <p class="menu-dish-desc">
                     Only this weekend, on the menu - our very own pumpkin spice blend!
                     Available with oat, almond and cow’s milk!
                 </p>
-                <h4 class="news-date">2025-SEP-01 CARROT CAKE BONANZA</h4>
-                <p>
+                <h4 class="menu-dish-title">2025-SEP-01 CARROT CAKE BONANZA</h4>
+                <p class="menu-dish-desc">
                     Our carrot cake recipe is now renewed and better than ever. Pop in
                     for a slice. All organic, of course!
                 </p>
             </div>
 
             <!------ CONTACT ------>
-            <h2 class="contact-title">Contact</h2>
+            <h2 class="contact-title"> Contact <img src="img/heart.svg" alt="Heart" class="contact-heart"></h2>
             <form class="contact-form">
                 <div class="input-container">
                     <div class="form-group">
