--- a/index.html
+++ b/index.html
@@ -141,38 +141,78 @@
                     <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Savory Brekkie</h3>
-                            <h4 class="menu-dish-title">SHAKSHUKA</h4>
-                            <p class="menu-dish-desc">Two poached eggs in a pan with tomato, peppers, and onions.
-                                Sourdough bread.</p>
-
-                            <h4 class="menu-dish-title">AVOCADO TOAST (V)</h4>
-                            <p class="menu-dish-desc">Avocado on sourdough bread with piri piri sauce. Spice it up with
-                                an add-on!</p>
-
-                            <h4 class="menu-dish-title">EGGS BENEDICT</h4>
-                            <p class="menu-dish-desc">Two poached eggs on toast topped with Hollandaise.</p>
-
-                            <h4 class="menu-dish-title">SALMON BAGEL</h4>
-                            <p class="menu-dish-desc">Salmon on sourdough bread with cream cheese and dill.</p>
+                            <ul class="coffee-list">
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">SHAKSHUKA</h4>
+                                        <p class="menu-dish-desc">Two poached eggs in a pan with tomato, peppers, and
+                                            onions. Sourdough bread.</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">AVOCADO TOAST (V)</h4>
+                                        <p class="menu-dish-desc">Avocado on sourdough bread with piri piri sauce. Spice
+                                            it up with an add-on!</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">EGGS BENEDICT</h4>
+                                        <p class="menu-dish-desc">Two poached eggs on toast topped with Hollandaise.</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">SALMON BAGEL</h4>
+                                        <p class="menu-dish-desc">Salmon on sourdough bread with cream cheese and dill.
+                                        </p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="border-top-grub">
                         <div class="inner">
                             <h3 class="grub-title">Sweet Brekkie</h3>
-                            <h4 class="menu-dish-title">ACAI BOWL</h4>
-                            <p class="menu-dish-desc">Acai sorbet blended with banana, topped with coconut and homemade
-                                granola.</p>
-
-                            <h4 class="menu-dish-title">FLUFFY PANCAKES</h4>
-                            <p class="menu-dish-desc">Stack of three fluffy pancakes with fresh fruit covered in maple
-                                syrup</p>
-
-                            <h4 class="menu-dish-title">WAFFLES (V)</h4>
-                            <p class="menu-dish-desc">Belgian waffles with fresh fruit and chocolate sauce</p>
-
-                            <h4 class="menu-dish-title">FRENCH TOAST</h4>
-                            <p class="menu-dish-desc">Two slices of buttery brioche bread with cinnamon sugar and maple
-                                syrup.</p>
+                            <ul class="coffee-list">
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">ACAI BOWL</h4>
+                                        <p class="menu-dish-desc">Acai sorbet blended with banana, topped with coconut
+                                            and homemade granola.</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">FLUFFY PANCAKES</h4>
+                                        <p class="menu-dish-desc">Stack of three fluffy pancakes with fresh fruit
+                                            covered in maple syrup</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">WAFFLES (V)</h4>
+                                        <p class="menu-dish-desc">Belgian waffles with fresh fruit and chocolate sauce
+                                        </p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                                <li>
+                                    <div>
+                                        <h4 class="menu-dish-title">FRENCH TOAST</h4>
+                                        <p class="menu-dish-desc">Two slices of buttery brioche bread with cinnamon
+                                            sugar and maple syrup.</p>
+                                    </div>
+                                    <span>15 SEK</span>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
