--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <li><span>LATTE</span><span>15 SEK</span></li>
                         </ul>
                         <figure class="coffee-cup">
-                            <img src="img/coffee_cup.svg">
+                            <img src="img/coffee_cup.svg" width="64" height="64" alt="Coffee cup">
                         </figure>
                     </div>
                     <div class="border-top">
@@ -279,7 +279,8 @@
             </div>
 
             <!------ CONTACT ------>
-            <h2 class="contact-title"> Contact <img src="img/heart.svg" alt="Heart" class="contact-heart"></h2>
+            <h2 class="contact-title"> Contact <img src="img/heart.svg" alt="Heart" class="contact-heart" width="24"
+                    height="24"></h2>
             <form class="contact-form">
                 <div class="input-container">
                     <div class="form-group">
@@ -320,7 +321,7 @@
         </section>
     </main>
     <div class="svg-vcenter">
-        <img src="img/random-line.svg" alt="Decorative line" class="decorative-line" />
+        <img src="img/random-line.svg" alt="Decorative line" class="decorative-line" width="120" height="16" />
     </div>
     <!-------- FOOTER ------>
     <footer class="footer">
@@ -339,7 +340,7 @@
     </footer>
     <!-- JavaScript -->
     <script src="js/app.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js" defer></script>
 </body>
 
 </html>
